# tpDcc-libs-svg

./: .travis.yml  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg
tests/: test_general.py
tpDcc/libs/svg/: __init__.py  __logging__.ini  __version__.py  _version.py
tpDcc/libs/svg/core/: consts.py  svglib.py
