[metadata]
name = tpDcc-libs-svg
description = Library to handle SVG files in Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpDcc/tpDcc-libs-svg

[options]
zip_safe = False
include_package_data = true
packages=find:
install_requires =
    pysvg==0.2.2;python_version < '3'
    pysvg-py3;python_version >= '3'

[options.extras_require]
dev = wheel
test = pytest

[bdist_wheel]
universal=1

[versioneer]
VCS = git
style = pep440
versionfile_source = tpDcc/libs/svg/_version.py
versionfile_build =
tag_prefix =
parentdir_prefix =